# text2sql_trainer_streamlit

./: .gitignore  HOWTORUN  README.md  basketball_wstrbacend.py  erd_viewer_mssql_streamlit_module.py  pyproject.toml  streamlit_backend.py
